# AI_Chatbot

./: .gitignore  DEPLOYMENT.md  NEXT_STEPS.md  README.md  debug.sh  docker-compose.prod.yml  docker-compose.yml  nginx.prod.conf  pyproject.toml  quick-deploy.sh  run.sh
backend/: Dockerfile  main.py  requirements.txt
backend/config/: settings.py
backend/src/: graph.py
backend/src/utils/: __init__.py  ui_components_fastapi.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/: StreamingChatExample.tsx
frontend/src/components/chat/: ChatApp.tsx  ChatHeader.tsx  InputBar.tsx  MessageItem.tsx  MessageList.tsx  QuickReplies.tsx  ThinkingIndicator.tsx
frontend/src/pages/: Index.tsx
frontend/src/services/: api.ts
