[project]
name = "ai-chatbot"
version = "0.1.0"
description = "AI-powered hospital chatbot with React frontend and FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["ai", "chatbot", "hospital", "langchain", "fastapi", "react"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

# Dependencies are managed in backend/requirements.txt for Docker builds
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
